add basic test